<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradain_back"
    tools:context=".RetraitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/prenom"/>

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/nom" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/tel"/>

        <EditText
            android:id="@+id/typeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/tyPiece" />

        <EditText
            android:id="@+id/numP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/numPiece"/>

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/code"/>

        <Button
            android:id="@+id/btnR"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_retrait"/>

    </LinearLayout>

</ScrollView>