<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradain_back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoEmett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoEmetteur"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColor"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/prenomEmet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/prenom"/>

        <EditText
            android:id="@+id/nomEmett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/nom" />

        <EditText
            android:id="@+id/telEmett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/tel" />

        <TextView
            android:id="@+id/InfoRecep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColor"
            android:layout_gravity="center"
            android:text="@string/infoRecepteur" />

        <EditText
            android:id="@+id/prenomRecep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/prenom"  />

        <EditText
            android:id="@+id/nomRecep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/nom" />

        <EditText
            android:id="@+id/telRecep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/tel"
            android:layout_marginBottom="10dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/typeDePiece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/tyPiece"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/pieceRecep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/numPiece" />

        <EditText
            android:id="@+id/montantEvoye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/color4"
            android:hint="@string/montant" />

        <Button
            android:id="@+id/btnE"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_envoi"/>


    </LinearLayout>

</ScrollView>