<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/gradain_back"
    tools:context=".MenuActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnSeDeconnecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:text="@string/btnSeDeconnecter"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnEnvoi"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/btnEnvoi" />

        <Button
            android:id="@+id/btnRetait"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRetrait" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/historique"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/btnHisto"/>

    </LinearLayout>

</LinearLayout>